# dodpayments_rust_sdk

./: Cargo.toml  LICENSE  README.md  llms-full.txt
examples/: activate_license.rs  add_products_to_product_collection_group.rs  archive_meter.rs  archive_product_collection.rs  cancel_scheduled_plan_change.rs  change_subscription_plan.rs  create_addon.rs  create_brand.rs  create_checkout.rs  create_credit_entitlement.rs  create_customer.rs  create_customer_credit_ledger_entry.rs  create_customer_portal_session.rs  create_customer_wallet_ledger_entry.rs  create_discount.rs  create_entitlement.rs  create_meter.rs  create_payment.rs  create_product.rs  create_product_collection.rs  create_product_collection_group.rs  create_product_short_link.rs  create_refund.rs  create_subscription.rs  create_subscription_charge.rs  create_wallet_ledger.rs  create_webhook.rs  deactivate_license.rs  delete_credit_entitlement.rs  delete_discount.rs  delete_entitlement.rs  delete_entitlement_file.rs  delete_product.rs  delete_product_collection_group.rs  delete_product_collection_group_item.rs  delete_webhook.rs  fulfill_license_key_grant.rs  get_addon_detail.rs  get_addons.rs  get_balance_ledger_entries.rs  (+82 more)
src/: builder.rs  client.rs  json.rs  lib.rs  request_builder.rs
src/api/: addons.rs  balance_ledger.rs  brands.rs  checkout.rs  credit_entitlements.rs  customers.rs  discounts.rs  disputes.rs  entitlements.rs  licenses.rs  meters.rs  misc.rs  mod.rs  payments.rs  payouts.rs  product_collections.rs  products.rs  refunds.rs  subscriptions.rs  usage_events.rs  wallets.rs  webhooks.rs
(+304 files in other folders)
