[package]
name = "dodopayments_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
