[package]
name = "dodopayments_rust"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Rust SDK for Dodo Payments API"
homepage = "https://github.com/Muhammad-Owais-Warsi/dodpayments_rust_sdk"
repository = "https://github.com/Muhammad-Owais-Warsi/dodpayments_rust_sdk"
documentation = "https://docs.rs/dodopayments_rust"
readme = "README.md"
keywords = ["payments", "api", "sdk"]
categories = ["api-bindings", "finance"]

include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
bytes = "1.10.1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
